@@ -3,7 +3,7 @@ Section: number_theoretical
 C-Name: znconreylog
 Prototype: GG
 Help: znconreylog(bid,m): Conrey logarithm associated to m in (Z/qZ)*,
- where bid is znstar(q, 2)
+ where bid is idealstar(,q)
 Doc: Given a \var{bid} associated to $(\Z/q\Z)^*$ (as per \kbd{bid =
  idealstar(,q)}), this function returns the Conrey logarithm of
  $m \in (\Z/q\Z)^*$.
@@ -40,12 +40,15 @@ Doc: Given a \var{bid} associated to $(\Z/q\Z)^*$ (as per \kbd{bid =
  way. (Which unfortunately does not generalize to ray class groups or Hecke
  characters.)
 
- The Conrey logarithm of $m$ is the vector $(m_p)_{p\in S_q}$.
+ The Conrey logarithm of $m$ is the vector $(m_p)_{p\in S_q}$. The inverse
+ function \tet{znconreyexp} recovers the Conrey label $m$ from a character.
 
  \bprog
  ? G = idealstar(,126000)
  ? znconreylog(G,1)
  %2 = [0, 0, 0, 0, 0]~
+ ? znconreyexp(G, %)
+ %3 = 1
  ? znconreylog(G,2)  \\ 2 is not coprime to modulus !!!
    ***   at top-level: znconreylog(G,2)
    ***                 ^-----------------
@@ -55,9 +58,9 @@ Doc: Given a \var{bid} associated to $(\Z/q\Z)^*$ (as per \kbd{bid =
    ***   Break loop: type 'break' to go back to GP prompt
  break>
  ? znconreylog(G,11) \\ wrt. Conrey generators
- %5 = [0, 3, 1, 76, 4]~
+ %4 = [0, 3, 1, 76, 4]~
  ? log11 = ideallog(,11,G)   \\ wrt. SNF generators
- %6 = [178, 3, -75, 1, 0]~
+ %5 = [178, 3, -75, 1, 0]~
  @eprog\noindent
 
  For convenience, we allow to input the ordinary discrete log of $m$,
